crates/tree-sitter-cql/grammar.js
    source_file: $ => seq(
      'module',
      field('name', $.ident),
      optional(';'),
      repeat($._item),
    ),

    _item: $ => choice(
      $.use_declaration,
      $.const_declaration,
      $.type_declaration,
      $.enum_declaration,
      $.table_declaration,
      $.index_declaration,
      $.function_declaration,
      $.query_declaration,
      $.action_declaration,
      $.invariant_declaration,
      $.test_declaration,
      $.property_declaration,
      $.fairness_declaration,
    ),

    visibility: $ => 'public',

    use_declaration: $ => seq(
      'use',
      $.ident,
      repeat(seq('::', $.ident)),
      optional(seq('as', field('alias', $.ident))),
      optional(';'),
    ),

    const_declaration: $ => seq(
      optional($.visibility),
      'const',
      field('name', $.ident),
      ':',
      field('type', $.type),
      '==',
      field('value', $._expression),
      optional(';'),
    ),

    type_declaration: $ => seq(
      optional($.visibility),
      'type',
      field('name', $.ident),
      optional(field('type_parameters', $.type_parameters)),
      '==',
      field('definition', $.type),
      optional(';'),
    ),

    enum_declaration: $ => seq(
      optional($.visibility),
      'enum',
      field('name', $.ident),
      optional(field('type_parameters', $.type_parameters)),
      '{',
      commaSep1($.variant),
      '}',
    ),

    variant: $ => seq(
      field('name', $.ident),
      optional(choice(
        seq('(', commaSep1($.type), ')'),
        field('payload', $.record_type),
      )),
    ),

    table_declaration: $ => seq(
      optional($.visibility),
      'table',
      field('name', $.ident),
      field('schema', $.record_type),
      $.primary_key_clause,
      repeat($.foreign_key_clause),
      optional(';'),
    ),

    primary_key_clause: $ => seq(
      'primary', 'key', '{', commaSep1($.ident), '}',
    ),

    foreign_key_clause: $ => seq(
      'foreign', 'key', '{', commaSep1($.ident), '}',
      'references', field('target', $.ident),
    ),

    index_declaration: $ => seq(
      optional($.visibility),
      'index',
      field('name', $.ident),
      'on',
      field('table', $.ident),
      '(',
      commaSep1($.ident),
      ')',
      optional(';'),
    ),

    function_declaration: $ => seq(
      optional($.visibility),
      'function',
      optional('recursive'),
      field('name', $.ident),
      optional(field('type_parameters', $.type_parameters)),
      '(',
      optional($.parameters),
      ')',
      '->',
      field('return_type', $.type),
      optional($._suffix),
      optional(seq('==', field('body', $.block))),
      optional(';'),
    ),

    query_declaration: $ => seq(
      optional($.visibility),
      'query',
      optional('recursive'),
      field('name', $.ident),
      '(',
      optional($.parameters),
      ')',
      '->',
      field('return_type', $.type),
      optional($._suffix),
      '==',
      field('body', $.block),
    ),

    action_declaration: $ => seq(
      optional($.visibility),
      'action',
      optional('recursive'),
      field('name', $.ident),
      '(',
      optional($.parameters),
      ')',
      '->',
      'set', '<', 'write_op', '>',
      optional($._suffix),
      '==',
      field('body', $.block),
    ),

    _suffix: $ => choice(
      seq($.decreases_clause, optional($.depth_clause)),
      $.depth_clause,
    ),

    decreases_clause: $ => seq('decreases', field('measure', $.ident)),

    depth_clause: $ => seq('with', 'depth', field('bound', $.int_literal)),

    invariant_declaration: $ => seq(
      'invariant',
      field('name', $.ident),
      'on',
      field('table', $.ident),
      '==',
      field('condition', $._expression),
      optional(';'),
    ),

    test_declaration: $ => seq(
      'test',
      field('name', $.ident),
      '{',
      repeat($._test_statement),
      '}',
    ),

    _test_statement: $ => choice(
      $.fixture_statement,
      $.expect_statement,
    ),

    fixture_statement: $ => seq(
      'fixture',
      field('name', $.ident),
      '==',
      field('value', $.vector_literal),
      optional(';'),
    ),

    expect_statement: $ => seq(
      'expect',
      field('actual', $._expression),
      '==',
      field('expected', $._expression),
      optional(';'),
    ),

    type_parameters: $ => seq('<', commaSep1($.ident), '>'),

    parameters: $ => commaSep1($.parameter),

    parameter: $ => seq(
      field('name', $.ident),
      ':',
      field('type', $.type),
    ),

    // ------------------------------------------------------------------
    // Types
    // ------------------------------------------------------------------

    type: $ => choice(
      $.primitive_type,
      $.decimal_type,
      $.named_type,
      $.key_type,
      $.value_type,
      $.option_type,
      $.vector_type,
      $.set_type,
      $.bag_type,
      $.map_type,
      $.table_type,
      $.tuple_type,
      $.function_type,
      $.record_type,
    ),

    primitive_type: $ => choice('bool', 'int', 'float', 'string', 'date'),

    decimal_type: $ => prec.right(seq(
      'decimal',
      optional(seq('(', $.int_literal, ',', $.int_literal, ')')),
    )),

    named_type: $ => seq(
      field('name', $.ident),
      optional(field('type_arguments', $.type_arguments)),
    ),

    option_type: $ => seq('option', '<', field('element', $.type), '>'),

    vector_type: $ => seq('vector', '<', field('element', $.type), '>'),

    set_type: $ => seq('set', '<', field('element', $.type), '>'),

    map_type: $ => seq(
      'map', '<',
      field('key', $.type), ',',
      field('value', $.type),
      '>',
    ),

    tuple_type: $ => seq(
      '(',
      $.type, ',',
      commaSep1($.type),
      ')',
    ),

    function_type: $ => prec.right(PREC.FUN_TYPE, seq(
      field('parameter', choice($.type, seq('(', $.type, ')'))),
      '->',
      field('return_type', $.type),
    )),

    record_type: $ => seq('{', commaSep1($.field_declaration), '}'),

    field_declaration: $ => seq(
      field('name', $.ident),
      ':',
      field('type', $.type),
    ),

    _expression: $ => choice(
      $.binary_expression,
      $.comparison_expression,
      $.unary_expression,
      $.cast_expression,
      $.member_expression,
      $.call_expression,
      $.try_expression,
      $.primed_expression,
      $.parenthesized_expression,
      $.tuple_literal,
      $.vector_literal,
      $.block,
      $.if_expression,
      $.match_expression,
      $.set_form,
      $.bag_form,
      $.map_literal,
      $.record_literal,
      $.record_update,
      $.quantifier,
      $.option_literal,
      $.lambda,
      $.literal,
      $.ident,
    ),

    binary_expression: $ => {
      const table = [
        [prec.right, PREC.IMPL, '=>'],
        [prec.left, PREC.OR, '\\/'],
        [prec.left, PREC.AND, '/\\'],
        [prec.left, PREC.ADD, $._add_operator],
        [prec.left, PREC.MUL, $._mul_operator],
      ];
      return choice(
        ...table.map(([assoc, precedence, operator]) => assoc(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression),
        ))),
      );
    },

    comparison_expression: $ => prec(PREC.CMP, seq(
      field('left', $.additive_expression),
      field('operator', $._cmp_operator),
      field('right', $.additive_expression),
    )),

    _cmp_operator: $ => choice(
      '=', '/=', '<', '>', '<=', '>=', '\\in', '\\subseteq',
    ),

    _add_operator: $ => choice('+', '-', '\\cup', '\\'),

    _mul_operator: $ => choice('*', '/', '%', '\\cap', '\\X'),

    // Additive/multiplicative levels, reachable as comparison operands
    // (where the flat `binary_expression` cannot be used, since it would
    // allow chaining) and mirroring the ADD/MUL levels elsewhere.
    additive_expression: $ => choice(
      prec.left(PREC.ADD, seq(
        field('left', $.additive_expression),
        field('operator', $._add_operator),
        field('right', $.multiplicative_expression),
      )),
      $.multiplicative_expression,
    ),

    multiplicative_expression: $ => choice(
      prec.left(PREC.MUL, seq(
        field('left', $.multiplicative_expression),
        field('operator', $._mul_operator),
        field('right', $._unary_level),
      )),
      $._unary_level,
    ),

    // Unary-and-below level: everything except binary operators. Shared by
    // unary operands and by the comparison sub-hierarchy.
    _unary_level: $ => choice(
      $.unary_expression,
      $.cast_expression,
      $._postfix_level,
    ),

    // Postfix level: primaries plus the postfix forms. Operands of the
    // postfix/cast rules are restricted to this level so that binary
    // operators (in particular comparison) cannot nest inside them.
    _postfix_level: $ => choice(
      $.member_expression,
      $.call_expression,
      $.try_expression,
      $.primed_expression,
      $.parenthesized_expression,
      $.tuple_literal,
      $.vector_literal,
      $.block,
      $.if_expression,
      $.match_expression,
      $.set_form,
      $.bag_form,
      $.map_literal,
      $.record_literal,
      $.record_update,
      $.quantifier,
      $.option_literal,
      $.lambda,
      $.literal,
      $.ident,
    ),

    member_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('operand', $._postfix_level),
      '.',
      field('member', choice($.ident, $.int_literal)),
    )),

    call_expression: $ => prec.left(PREC.POSTFIX, seq(
      field('function', $._postfix_level),
      optional(seq('::', field('type_arguments', $.type_arguments))),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq('(', commaSep($.argument), ')'),

    argument: $ => seq(
      optional(seq(field('name', $.ident), ':')),
      field('value', $._expression),
    ),

    vector_literal: $ => seq('[', commaSep($._expression), ']'),

    block: $ => seq(
      '{',
      repeat(seq('let', $.let_binding, ';')),
      field('body', $._expression),
      '}',
    ),

    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      'then',
      field('consequence', $._expression),
      'else',
      field('alternative', $._expression),
    )),

    set_form: $ => seq(
      'set', '{',
      choice(
        commaSep($._expression),
        $.filter_form,
        $.map_form,
      ),
      '}',
    ),

    generator: $ => seq(
      $.pattern,
      '\\in',
      field('collection', $._expression),
    ),

    record_literal: $ => seq(
      'record', '{',
      commaSep1($.record_field),
      '}',
    ),

    record_field: $ => seq(
      field('name', $.ident),
      ':',
      field('value', $._expression),
    ),

    quantifier: $ => seq(
      field('quantifier', choice('\\A', '\\E')),
      commaSep1($.generator),
      ':',
      field('body', $._expression),
    ),

    option_literal: $ => choice(
      seq('some', '(', field('value', $._expression), ')'),
      'none',
    ),

    // ------------------------------------------------------------------
    // Lambda
    // ------------------------------------------------------------------

    pattern: $ => choice(
      $.wildcard_pattern,
      $.ident,
      $.int_literal,
      $.string_literal,
      $.boolean_literal,
      $.option_pattern,
      $.variant_pattern,
      $.tuple_pattern,
      $.record_pattern,
      $.vector_pattern,
    ),

    literal: $ => choice(
      $.int_literal,
      $.float_literal,
      $.string_literal,
      $.date_literal,
      $.decimal_literal,
      $.boolean_literal,
    ),

    boolean_literal: $ => choice('true', 'false'),

    int_literal: $ => token(choice(
      '0',
      /[1-9][0-9_]*/,
      /0x[0-9a-fA-F_]+/,
    )),

    float_literal: $ => token(choice(
      /[0-9][0-9_]*\.[0-9_]+([eE][+-]?[0-9]+)?/,
      /[0-9][0-9_]*[eE][+-]?[0-9]+/,
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    string_content: $ => token(prec(1, /[^"\\]+/)),

    escape_sequence: $ => token(prec(2, choice(
      '\\n',
      '\\t',
      '\\\\',
      '\\"',
      /\\u\{[0-9a-fA-F]{1,6}\}/,
    ))),

    interpolation: $ => seq('\\(', $._expression, ')'),

    date_literal: $ => seq('date', field('value', $.string_literal)),

    decimal_literal: $ => seq(
      'decimal',
      optional(seq('(', $.int_literal, ',', $.int_literal, ')')),
      field('value', choice(
        $.int_literal,
        alias($._plain_float, $.float_literal),
      )),
    ),

    // Float without exponent, only used as the trailing part of a
    // decimal literal (A.1: `decimal(4,2) 3.14`).
    _plain_float: $ => token(/[0-9][0-9_]*\.[0-9_]+/),

    // ------------------------------------------------------------------
    // Lexical basics
    // ------------------------------------------------------------------

    ident: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    comment: $ => token(choice(
      seq('//', /[^\n]*/),
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
    )),
  },
});
